--- a/tabela.html
+++ b/tabela.html
@@ -19,8 +19,14 @@
     </div>
     
     <div id="tabelas">
-        <h4>Conteúdo: </h4> 
-
+        <div id="tituloTabela">
+            <div>
+                <h4>Conteúdo: </h4> 
+            </div>
+            <div id="divBancoDados">
+                <input type="text" placeholder="nome Banco Dados" id="inputBancoDados">
+            </div>
+        </div>
         <div id="menu-linha">
             <div id="button-crud">
                 <input id="button-update" type="button" value="Atualizar linha"  onclick="atualizarLinha()">
