--- a/tabela.html
+++ b/tabela.html
@@ -20,13 +20,14 @@
     
     <div id="tabelas">
         <div id="tituloTabela">
-            <div>
+            <div id="divConteudo">
                 <h4>Conteúdo: </h4> 
             </div>
             <div id="divBancoDados">
-                <input type="text" placeholder="nome Banco Dados" id="inputBancoDados">
+                <input type="text" placeholder="Nome Banco Dados" id="inputBancoDados">
             </div>
         </div>
+
         <div id="menu-linha">
             <div id="button-crud">
                 <input id="button-update" type="button" value="Atualizar linha"  onclick="atualizarLinha()">
