--- a/tabela.html
+++ b/tabela.html
@@ -25,6 +25,7 @@
             </div>
             <div id="divBancoDados">
                 <input type="text" placeholder="Nome Banco Dados" id="inputBancoDados">
+                <input type="button" id="deletarBD" value="Deletar BD" onclick="deletarBD()">
             </div>
         </div>
 
@@ -35,7 +36,7 @@
                 <input id="button-delete" type="button" value="Deletar linha" onclick="deletarLinha()">
             </div>
         </div>
-        <table>
+        <table id="table section-table">
 
         </table>
     </div>
