--- a/tabela.html
+++ b/tabela.html
@@ -51,8 +51,14 @@
                 <div id="createCMD">
                     
                 </div>
-                <div id="tabelasCMD">
+
+                <div id="idTabelaCMD">
+                    <div id="nomeTabelaCMD">
+
+                    </div>
+                    <div id="tabelasCMD">
                     
+                    </div>
                 </div>
             </div>
         </div>
