--- a/tabela.html
+++ b/tabela.html
@@ -41,7 +41,7 @@
         </table>
         
     </div>
-        <h4>Comandos SQL:</h4>
+        <h4>Comandos SQLite:</h4>
     <div>
         <div id="prompt-CMD">
             <div id="button-copy">
