--- a/tabela.html
+++ b/tabela.html
@@ -45,7 +45,7 @@
     <div>
         <div id="prompt-CMD">
             <div id="button-copy">
-                <input type="button" id="buttonSQL" value="Copiar" onclick="copiar()">
+                <input type="button" id="buttonSQL" value="Copiar" onclick="copiarCMD()">
             </div>
             <div id="cmd">
                 <div id="createCMD">
