--- a/tabela.html
+++ b/tabela.html
@@ -33,7 +33,7 @@
             <div id="button-crud">
                 <input id="button-update" type="button" value="Atualizar linha"  onclick="atualizarLinha()">
                 |
-                <input id="button-analyze" type="button" value="Analisar BD" onclick="">
+                <input id="button-analyze" type="button" value="Analisar BD" onclick="analisarBD()">
                 |
                 <input id="button-delete" type="button" value="Deletar linha" onclick="deletarLinha()">
                 
