--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section id="formSection">
-            <iframe id="formulario" name="formulario" height="500" width="100%" src="tabela.html" title="Formulário de Cadastro">...</iframe>
+            <iframe id="formulario" name="formulario" height=auto width="100%" src="tabela.html" title="Formulário de Cadastro">...</iframe>
         </section>
     </main>
     
