--- a/tabela.html
+++ b/tabela.html
@@ -31,11 +31,11 @@
 
         <div id="menu-linha">
             <div id="button-crud">
-                <input id="button-update" type="button" value="Atualizar linha"  onclick="atualizarLinha()">
+                <input id="button-update" type="button" value="Atualizar Cmd"  onclick="atualizarCmd()">
                 <!-- |
                 <input id="button-analyze" type="button" value="Analisar BD" onclick="analisarBD()"> -->
                 |
-                <input id="button-delete" type="button" value="Deletar linha" onclick="deletarLinha()">
+                <input id="button-delete" type="button" value="Deletar Cmd" onclick="deletarCmd()">
                 
             </div>
         </div>
