--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     
     <nav id="menuSite">
-        <div id="menu">
+        <!-- <div id="menu">
             <div id="buttonMenu">
                 <img src="assets/images/icon/home.png" width="22px" height="22px" alt="Ícone home" id="img"/>
             </div>
@@ -42,7 +42,7 @@
             <div id="buttonMenu3">
                 <img src="assets/images/icon/postgreesql.png" width="22px" height="22px" alt="Ícone PostgreSQL"/>
             </div>
-        </div>
+        </div> -->
     </nav>
 
     <main id="corpoSite">
