--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
         </div>
     </header>
 
-    <div id="infoSite">
-        <p>Modelo desenvolvido para controle.</p>
-    </div>
-    
-    <nav id="menuSite">
+    <div id="menuSite">
         <!-- <div id="menu">
             <div id="buttonMenu">
                 <img src="assets/images/icon/home.png" width="22px" height="22px" alt="Ícone home" id="img"/>
@@ -43,8 +39,12 @@
                 <img src="assets/images/icon/postgreesql.png" width="22px" height="22px" alt="Ícone PostgreSQL"/>
             </div>
         </div> -->
-    </nav>
+    </div>
 
+    <div id="infoSite">
+        <p>Modelo desenvolvido para controle.</p>
+    </div>
+    
     <main id="corpoSite">
         <section id="headCorpo">
             <!-- Cabeçalho do corpo principal -->
