--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>Modelo desenvolvido para controle.</p>
     </div>
     
-    <main id="corpoSite">
+    <div id="corpoSite">
         <section id="headCorpo">
             <!-- Cabeçalho do corpo principal -->
         </section>
@@ -53,7 +53,7 @@
         <section id="formSection">
             <iframe id="formulario" name="formulario" height=auto width="100%" src="tabela.html" title="Formulário de Cadastro">...</iframe>
         </section>
-    </main>
+    </div>
     
     <script src="assets/js/script-home.js"></script>
 
