--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
 
         <div class="container">
-            <a id="login" href="#login">Login</a>
-            <a id="cadastrar" href="#cadastrar">Cadastrar</a>
+            <a id="login" href="#login"></a>
+            <a id="cadastrar" href="#cadastrar">Procurar</a>
         </div>
     </header>
 
