--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do seu site</title>
+    <title>Sis-Html-SQl</title>
     <link rel="stylesheet" href="assets/css/style-home.css">
 </head>
 <body>
     <header id="cabecalhoSite">
         <div id="ladoEsquerdo">
             <div>
-                Controle
+                Controle SQl
             </div>
         </div>
         
